--- a/css/practica6_1.css
+++ b/css/practica6_1.css
@@ -118,3 +118,48 @@ a:hover{
 	margin-top: 5px;
 	margin-bottom: 5px;
 }
+
+.left_section_box{
+	margin-bottom: 15px;
+}
+
+.box_contenido{
+	width: 380px;
+	padding: 15px 15px 0px 15px;
+}
+
+.box_contenido img{
+	float: left;
+	border: none;
+	margin-bottom: 10px;
+	margin-right: 13px;
+	display: inline;
+}
+
+.box_cabecera{
+	width: 395px;
+	height: 20px;
+	background-image: url(../images/section_box_top.jpg);
+	background-repeat: repeat-x;
+	font-weight: bold;
+	font-size: 16px;
+	color: #666;
+	padding-top: 10px;
+	padding-left: 15px;
+}
+
+.post{
+	margin-top: 25px;
+	color: #c60;
+	font-size: 11px;
+}
+
+.post a{
+	color: #c60;
+	text-decoration: none;
+}
+
+.post a:hover{
+	text-decoration: underline;
+	color: #c60;
+}
