--- a/css/practica6_1.css
+++ b/css/practica6_1.css
@@ -5,7 +5,7 @@ html al{
 body{
 	margin: 0;
 	padding: 0;
-	font: "Arial", Helvetica, sans-serif;
+	font-family: "Arial", Helvetica, sans-serif;
 	font-size: 12px;
 	line-height: 1.5em;
 	color: #333333;
@@ -40,12 +40,13 @@ a:hover{
 	width: 180px;
 	float: left;
 	margin-left: 15px;
+	margin-right: 10px;
 }
 
 #right_section{
 	width: 322px;
 	float: right;
-	margin-right: 10px;
+	
 }
 
 .cleaner{
@@ -60,6 +61,11 @@ a:hover{
 	width: 385px;
 	height: 55px;
 	float: left;
+	margin-top: 25px;
+	padding-top: 20px;
+	padding-left: 25px;
+	background-image: url(../images/logo_bg.jpg);
+	background-repeat: repeat-x;
 }
 
 #cabecera #search{
@@ -162,4 +168,156 @@ a:hover{
 .post a:hover{
 	text-decoration: underline;
 	color: #c60;
+}
+
+.middle_section_box{
+	margin-bottom: 15px;
+	padding: 10px;
+	border: solid 1px;
+	border-color: #ccc;
+	width: 168px;
+}
+
+.middle_section_box h1{
+	color: #c60;
+	text-decoration: underline;
+	font-size: 15px;
+	margin-bottom: 9px;	
+}
+
+.middle_section_box ul{
+	list-style: none;
+	margin: 0 0 0 0;
+	padding: 0 0 0 0;
+	color: #333;
+	font-family: verdana;
+	font-size: 11px;
+}
+
+.middle_section_box li{
+	margin-bottom: 3px;
+}
+
+.middle_section_box li.last{
+	margin-top: 24px;
+}
+
+#menu{
+	width: 100%;
+	height: 38px;
+	float: left;
+	margin-top: 9px;
+	padding: 0 0 0 0;
+	margin-right: 0;
+	margin-left: 0;
+	margin-bottom: 0;
+	list-style: none;
+}
+
+#cabecera{
+	width: 100%;
+	height: 157px;
+	background-image: url(../images/background_section_top_bg.jpg);
+	background-repeat: repeat-x;
+}
+
+#menu li{
+	display: inline;
+}
+
+#menu li a{
+	width: 110px;
+	float: left;
+	text-decoration: none;
+	font-weight: bold;
+	text-align: center;
+	font-size: 14px;
+	color: #8A4500;
+	padding-top: 8px;
+}
+
+#menu li a:hover{
+	color: #fff;
+	height: 26px;
+	background-color: #cc6601;
+}
+
+#menu li a.current{
+	color: #fff;
+	height: 26px;
+	background-color: #cc6601;
+}
+
+#logo h1{
+	font-weight: normal;
+	margin: 0 0 0 0;
+	color: #666;
+	font-size: 24px;
+}
+
+#logo h2{
+	font-weight: normal;
+	margin: 0 0 0 0;
+	color: #666;
+	padding-top: 10px;
+	font-size: 14px;
+}
+
+#footer{
+	height: 29px;
+	background-image: url(../images/footer_bg.jpg);
+	background-repeat: repeat-x;
+	font-family: verdana;
+	text-align: center;
+	font-size: 11px;
+	padding: 20px 0 0 0;
+	color: #666;
+	width: 100%;
+}
+
+#search{
+	margin-top: 30px;
+	margin-right: 20px;
+}
+
+#search img{
+	float: right;
+	margin-right: -7px;
+}
+
+#search form{
+	float: right;
+	width: 330px;
+	margin-top:10px;
+}
+
+#textfield { 
+	float: left; 
+	width: 240px; 
+	height: 16px;
+	background: #fff; 
+	color: #999; 
+	border: solid 1px #999; 
+	margin: 0;
+	padding: 5px 5px; }
+
+#button{
+	float: right;
+	border: solid 1px #999;
+	cursor: pointer;
+	font-size: 14px;
+	text-align: center;
+	white-space: pre;
+	width: 70px;
+	height: 28px;
+	color: #999;
+	background: #fff;
+	margin: 0 0 0 0;
+	padding-bottom: 5px;
+	padding-top: 4px;
+}
+
+.wrapper{
+	width: 950px;
+	margin: auto;
 }
